--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4.14"
 simple_logger = "1.13.0"
 dotenv = "0.15.0"
 chrono = "0.4.19"
+rand = "0.8.4"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
